--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,7 @@
   "crons": [
     { "path": "/api/cron/checkin-reminders", "schedule": "0 9 * * 1-5" },
     { "path": "/api/cron/weekly-summary", "schedule": "0 8 * * 1" }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next"
 }
